Cambios en el repositorio

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Repositorio de git</h1>
+
+git config --global user.name "John Doe"
+git config --global user.email johndoe@example.com
+
 </body>
 </html>
